Router partial was added on post page. Specs for router partial were added

--- a/backend/app/views/posts/show.html.erb
+++ b/backend/app/views/posts/show.html.erb
@@ -2,5 +2,10 @@
   <%= @post.title %>
 </h1>
 <content>
-  <%= @post.body %>
+  <div style="width: 30%; float: left">
+    <%= render partial: 'router', locals: { post_router_item: @post_router_item } %>
+  </div>
+  <div style="width: 70%">
+    <%= @post.body %>
+  </div>
 </content>
